--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,8 @@
 
 <link rel="stylesheet" href="default.css">
 <!--익스터널 스타일 파일 링크/ rel은 링크하려는 문서를 선언/ 하이퍼텍스트레퍼런스(href) -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 </head>
 <body>
   <div class="container"></div>
